--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,7 +19,8 @@
 <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-right fixed-top " id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark text-right fixed-top" id="mainNav"
+        style="background: rgba(0,0,0,0)">
         <div class="container w-100">
             <a class="navbar-brand js-scroll-trigger" href="#home"><img href="#home" src="./img/logo-maua.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -41,14 +42,13 @@
         </div>
     </nav>
     <!-- Content -->
-    <section id="home" class="masthead my-0 py-0">
-        <img src="img/28456604668_d7507b0a4e_z.jpg" class="p-0 m-0 overflow-hidden">
-        <div class="container h-100 content">
+    <section id="home" class="m-0 p-0">
+        <div class="container h-100 mx-0">
             <div class="row h-100">
-                <div class="col-12 my-auto mr-5">
-                    <div class="masthead-content py-5 py-md-0 text-right mx-0">
-                        <h1 class=" mb-3 text-warning mr-5">Iniciação Científica</h1>
-                        <p class="mb-5 text-white float-right mr-5">Participe de um projeto de pesquisa em qualquer área
+                <div class="col-12 my-auto">
+                    <div class="mr-4">
+                        <h1 class="mb-3 text-warning">Iniciação Científica</h1>
+                        <p class="text-white">Participe de um projeto de pesquisa em qualquer área
                             do
                             conhecimento, sempre
                             com a orientação de um pesquisador experiente.</p>
@@ -58,13 +58,10 @@
         </div>
     </section>
 
-    <section id="about" class="bg-white p-0">
-        <div class="images pt-1">
-            <img src="img/33964104428_e67e12b306_z.jpg" class="img1 img-fluid my-2 rounded">
-            <img src="img/40874751883_c6705f6c06_z.jpg" class="img2 img-fluid my-2 rounded">
-            <img src="img/27407950898_5cc4a969ce_z.jpg" class="img3 img-fluid my-2 rounded">
-        </div>
-        <div class="txt text-right">
+    <section id="about" class="p-0 bg-white">
+        <div class="image"></div>
+        <div class="txt text-right my-auto">
+            <div class="skew"></div>
             <h2 class="mb-3 mr-5 text-warning">O que é <span style="color: #004684;"><strong>Iniciação
                         Científica?</strong></span></h2>
             <p class="mb-5 ml-5">Iniciação científica é algo bacana e show para desenvolvimento
